# pencil-benchmark

./: .gitignore  .gitmodules  0001-Make-return-type-of-evaluateSamples-void.patch  0002-Do-not-create-.o-and-executables-in-one-step.patch  0003-Remove-unused-variables.patch  CMakeLists.txt  FindTBB.cmake  PENCIL.cmake  README  cast.h  compile_run_kernels.sh  get_median_first_column.sh  makefile  makefile.in.base  mlp.h  mlp.hpp  mlp_impl.c  mlp_impl.h  opencv-2.4.6.1_autolock_and_gpuimg.patch  ppcg_tuning.sh  prepare_pool.sh  restore_pool.sh  test_mlp.cpp
GaussianBlur/: filter_sep_col.cl  gaussian.pencil.c  gaussian.pencil.h  test_gaussian.cpp
NAS/OpenCL/BT/: kernel_adi_gpu.cl  kernel_initialize.cl
NAS/OpenCL/SP/: kernel_initialize.cl
NAS/OpenMP/BT/: add.c  rhs.c  x_solve.c  y_solve.c
NAS/OpenMP/CG/: cg.c
NAS/OpenMP/DC/: dc.c
NAS/OpenMP/EP/: ep.c
NAS/OpenMP/IS/: is.c
NAS/OpenMP/LU/: erhs.c  l2norm.c  lu.c  (+4 more)
NAS/PENCIL/: Makefile  benchmark_control.h
OpenCV/: OpenCV.cpp  makefile  test1.jpg.REMOVED.git-id  test_OpenCV.cpp
VOBLA-DSL/axpy/: caxpy.c  daxpy.c  saxpy.c  zaxpy.c
VOBLA-DSL/gemm/: cgemm.c  dgemm.c  sgemm.c  zgemm.c
VOBLA-DSL/gemv/: cgemv.c  dgemv.c  sgemv.c  zgemv.c
VOBLA-DSL/include/: vobla_headers.h
VOBLA-DSL/scal/: cscal.c  dscal.c  sscal.c  zscal.c
VOBLA-DSL/syr2k/: csyr2k.c  dsyr2k.c  ssyr2k.c  zsyr2k.c
VOBLA-DSL/syrk/: csyrk.c  dsyrk.c  ssyrk.c  zsyrk.c
VOBLA-DSL/trmv/: ctrmv.c  dtrmv.c  strmv.c  ztrmv.c
base/: color.cl  color.cpp  expand.cpp  function.cpp  local.cl  makefile  mlp_impl.c  nesting.cl  ocl_utilities.c  test_allocation.cpp  test_color.cpp  test_local.cpp  test_nesting.cpp
boxFilter/: filtering_boxFilter.cl  test_boxFilter.cpp
core/: makefile  memory.hpp  utility.hpp
cvIntegral/: imgproc_integral_sum.cl  test_integral.cpp
cvtColor/: cvt_color.pencil.c  cvt_color.pencil.h  test_color.cpp  test_cvtColor.cpp
cvt_color/: cvt_color.cl  cvt_color.pencil.c  cvt_color.pencil.h  test_cvt_color.cpp
dilate/: dilate.pencil.c  dilate.pencil.h  filtering_morph.cl  pool  test_dilate.cpp
filter2D/: filter2D.pencil.c  filter2D.pencil.h  imgproc_convolve.cl  test_filter2D.cpp
gaussian/: README  filter_sep_row.cl  gaussian.pencil.c  gaussian.pencil.h  test_gaussian.cpp
histogram/: histogram.pencil.c  histogram.pencil.h  test_histogram.cpp
hog/: HogDescriptor.cpp  HogDescriptor.h  HogDescriptor.hpp  fast_approximate_math.h  hog.opencl.cl  hog.pencil.c  hog.pencil.h  test_hog.cpp
include/: errors.hpp  memory.hpp  opencl.hpp  utility.hpp
mlp/: allocator.cpp  allocator.hpp  bench_mlp.hpp  cast.h  cltypes.h  compile_pencil.sh  compile_ppcg.sh  gel_mlp.cpp  makefile  mlp.hpp  mlp_impl.c  mlp_impl.cl  mlp_impl.h  mlp_impl.pencil.c  mlp_impl.ppcg.c  mlp_impl_glu.pencil.c  mlp_impl_glue.pencil.c  mlp_impl_glue.pencil.c_notused_  mlp_impl_kernels.pencil.c  mlp_impl_pencil.h  opencl_mlp.cpp  operators.cl  pencil.h  serialization.cpp  serialization.hpp  test_gel_mlp.cpp  test_mlp.cpp  test_opencl_mlp.cpp  test_operators.cpp
mlp/GEL/: defines.h  histo.h  histo_impl.h  linalg.cpp  linalg.h  makefile
opencl/: cltypes.h  errors.cpp  errors.hpp  makefile  opencl.hpp
pencil/: math.h
pencil-benchmarks-imageproc/: 0001-Make-image-filtering-erode-dilate-work-with-ARM-Mali.patch  AUTHORS  CMakeLists.txt  FindOpenCL.cmake  FindTBB.cmake  README
pencil-benchmarks-imageproc/cvt_color/: cvt_color.c  cvt_color.pencil.h  test_cvt_color.cpp
pencil-benchmarks-imageproc/dilate/: dilate.c  dilate.h  dilate.pencil.c  test_dilate.cpp
pencil-benchmarks-imageproc/filter2D/: filter2D.c  filter2D.pencil.c  filter2D.pencil.h  test_filter2D.cpp
pencil-benchmarks-imageproc/gaussian/: gaussian.c  gaussian.pencil.c  gaussian.pencil.h  test_gaussian.cpp
pencil-benchmarks-imageproc/histogram/: histogram.c  histogram.pencil.c  histogram.pencil.h  test_histogram.cpp
pencil-benchmarks-imageproc/hog/: HogDescriptor.cl  HogDescriptor.cpp  HogDescriptor.h  HogDescriptor.hpp  hog.c  hog.detail.h  hog.h  hog.pencil.c  hog.pencil.detail.h  hog.pencil.h  test_hog.cpp
pencil-benchmarks-imageproc/include/: utility.hpp
pencil-benchmarks-imageproc/resize/: resize.c  resize.h  resize.pencil.c  resize.pencil.h  test_resize.cpp
pencil-benchmarks-imageproc/scripts/: Nvidia_profiling_options.conf  compile_and_run_kernels.sh  core.sh  ppcg_tuning.sh  profiling_AMD.sh  profiling_Nvidia.sh  scripts_config.conf
pencil-benchmarks-imageproc/scripts/ppcg_preset_options/: best_optimizations_log.AMD-HD5670.sh  best_optimizations_log.AMD-R9-285.sh  best_optimizations_log.Nvidia_GTX470.sh  ppcg_default_options.sh
pencil-benchmarks-imageproc/warpAffine/: test_warpAffine.cpp  warpAffine.pencil.c
pool/: 04745.jpg.7z.REMOVED.git-id  3970203935_2be6dbb13e_o.jpg.7z.REMOVED.git-id  5093098866_9bfa0c1f8b_o.jpg.7z.REMOVED.git-id  514764580_4fec5cfb71_o.jpg.7z  5484201486_0cc5845cf1_o.jpg.7z.REMOVED.git-id  7048000969_3190d06555_o.jpg.7z.REMOVED.git-id  7180385238_3893e49c2b_o.jpg.7z.REMOVED.git-id  7368238070_46cb1e4da7_o.jpg.7z.REMOVED.git-id  8316449920_217c5edf56_o.jpg.7z.REMOVED.git-id  8455950567_c3a0bba489_o.jpg.7z.REMOVED.git-id  GLIMPSE-MIPSGAL_Milky_Way_12.jpg.7z.REMOVED.git-id  Kings_Cross_Western_Concourse_-_central_position_-_2012-05-02.75.jpg.7z.REMOVED.git-id  M104_ngc4594_sombrero_galaxy_hi-res.jpg.7z.REMOVED.git-id  Pomegranate_bokehrama_portrait.jpg.7z.REMOVED.git-id  Super_Moon_Panorma.jpg.7z  carina_48x24full.jpg.7z.REMOVED.git-id  eso1113a.jpg.7z.REMOVED.git-id  final_owl_web.jpg.7z  heic0619e-ngc6357.jpg.7z.REMOVED.git-id  rc.jpg.7z.REMOVED.git-id  test1.jpg.7z.REMOVED.git-id
resize/: imgproc_resize.cl  resize.pencil.c  resize.pencil.h  test_resize.cpp
scripts/: core.sh  scripts_config.conf
scripts/ppcg_preset_options/: best_optimizations_log.Mali-T604.sh  ppcg_default_options.sh
shoc-rodinia/: .gitignore
shoc-rodinia/LICENCES/: LICENSE.ARM.txt
shoc-rodinia/include/: measure-time.h
warpAffine/: affine.pencil.c  affine.pencil.h  imgproc_warpAffine.cl  test_affine.cpp  test_warpAffine.cpp  warpAffine.pencil.c  warpAffine.pencil.h
(+53 files in other folders)
